--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-hola
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Ana Vega | Portfolio</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link href="css/lightbox.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+  <script type="text/javascript" src="js/lightbox.min.js"></script>
+  <script type="text/javascript" src="js/wow.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+
+    <!--[if lt IE 9]>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="images/favicon.ico">
+</head><!--/head-->
+
+<body>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58833694-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-58833694-5');
+  </script>
+
+  <script language="javascript" type="text/javascript" src="header.js"></script>
+
+
+<!--
+    <section id="page-breadcrumb">
+        <div class="vertical-center sun">
+             <div class="container">
+                <div class="row">
+                    <div class="action">
+                        <div class="col-sm-12">
+                            <h1 class="title">Portfolio</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </section>
+-->
+
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <ul class="portfolio-filter text-center">
+                    <li><a class="btn btn-default active" href="#" data-filter="*">Todo</a></li>
+                    <li><a class="btn btn-default" href="#" data-filter=".multimedia">Multimedia</a></li>
+                    <li><a class="btn btn-default" href="#" data-filter=".otros">Otros</a></li>
+                </ul><!--/#portfolio-filter-->
+
+
+    <div class="portfolio-items">
+
+
+
+<!--
+****************************
+IMAGEN DEL PORTFOLIO
+****************************
+-->
+
+
+
+
+        <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item multimedia">
+            <div class="portfolio-wrapper">
+                <div class="portfolio-single">
+                    <div class="portfolio-thumb">
+                    <a href="https://play.google.com/store/apps/details?id=com.LHC.ElViajejuegodeemparejar">
+                    <img src="images/portfolio/elviajevj/icono250.png" class="img-responsive" alt="">
+                    </a>
+                    </div>
+                </div>
+                <div class="portfolio-info"><h2></h2></div>
+            </div>
+        </div>
+
+        <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item multimedia">
+            <div class="portfolio-wrapper">
+                <div class="portfolio-single">
+                    <div class="portfolio-thumb">
+                      <a href="https://play.google.com/store/apps/details?id=com.lhc.atraplas">
+                      <img src="images/portfolio/atraplas/icono250.png" class="img-responsive" alt="">
+                      </a>
+                    </div>
+                </div>
+                <div class="portfolio-info"><h2></h2></div>
+            </div>
+        </div>
+
+
+
+
+
+            </div>
+        </div>
+    </section>
+    <!--/#portfolio-->
+
+
+
+      <script language="javascript" type="text/javascript" src="footer.js"></script>
+
+
+
+
+
+
+</body>
+</html>
