--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Ana Vega | Portfolio</title>
+    <title>LHC</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="css/lightbox.css" rel="stylesheet">
@@ -41,30 +41,34 @@
   <script language="javascript" type="text/javascript" src="header.js"></script>
 
 
-<!--
     <section id="page-breadcrumb">
         <div class="vertical-center sun">
              <div class="container">
                 <div class="row">
                     <div class="action">
                         <div class="col-sm-12">
-                            <h1 class="title">Portfolio</h1>
+                            <h1 class="title">La Habitación Creativa</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
    </section>
--->
+
 
     <section id="portfolio">
         <div class="container">
+
+            <!--
             <div class="row">
+
+                
                 <ul class="portfolio-filter text-center">
                     <li><a class="btn btn-default active" href="#" data-filter="*">Todo</a></li>
                     <li><a class="btn btn-default" href="#" data-filter=".multimedia">Multimedia</a></li>
                     <li><a class="btn btn-default" href="#" data-filter=".otros">Otros</a></li>
-                </ul><!--/#portfolio-filter-->
+                </ul>
+            -->
 
 
     <div class="portfolio-items">
@@ -78,14 +82,14 @@ IMAGEN DEL PORTFOLIO
 -->
 
 
-
+        <br></br>
 
         <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item multimedia">
             <div class="portfolio-wrapper">
                 <div class="portfolio-single">
                     <div class="portfolio-thumb">
                     <a href="https://play.google.com/store/apps/details?id=com.LHC.ElViajejuegodeemparejar">
-                    <img src="images/portfolio/elviajevj/icono250.png" class="img-responsive" alt="">
+                    <img src="images/elviaje.png" class="img-responsive" alt="">
                     </a>
                     </div>
                 </div>
@@ -98,7 +102,7 @@ IMAGEN DEL PORTFOLIO
                 <div class="portfolio-single">
                     <div class="portfolio-thumb">
                       <a href="https://play.google.com/store/apps/details?id=com.lhc.atraplas">
-                      <img src="images/portfolio/atraplas/icono250.png" class="img-responsive" alt="">
+                      <img src="images/atraplas.png" class="img-responsive" alt="">
                       </a>
                     </div>
                 </div>
@@ -110,7 +114,7 @@ IMAGEN DEL PORTFOLIO
 
 
 
-            </div>
+            </div> <!-- portfolio items -->
         </div>
     </section>
     <!--/#portfolio-->
