--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
   <script language="javascript" type="text/javascript" src="header.js"></script>
 
 
-  <!--
+
     <section id="page-breadcrumb">
         <div class="vertical-center sun">
              <div class="container">
                 <div class="row">
                     <div class="action">
                         <div class="col-sm-12">
+                            <h1><b>LHC</b></h1>
+                            <h3>La Habitacion Creativa</h3>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
    </section>
--->
+
 
 </br>
 </br>
